--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-E3FGMAK\\SQLEXPRESS;Database=e-commerce;TrustServerCertificate=True; Trusted_Connection=True;"
+  },
 }
