--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-E3FGMAK\\SQLEXPRESS;Database=e-commerce;TrustServerCertificate=True; Trusted_Connection=True;"
+  },
+  "Jwt": {
+    "Key": "ThisIsASecretKeyForJwtToken12345",
+    "Issuer": "MyApi",
+    "Audience": "MyApiUser"
   }
 }
